--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.ElearningApp"
         tools:targetApi="31">
         <activity
+            android:name=".VideoScreen"
+            android:exported="false" />
+        <activity
+            android:name=".VideoList"
+            android:exported="false" />
+        <activity
             android:name=".Nextactivity"
             android:exported="false" />
         <activity
